# AI-invesment-analyzer

./: .env.example  .gitignore  README.md  app.py  claude.md  package-lock.json  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.streamlit/: config.toml
agents/: analyst_agent.py  collector_agent.py  recommender_agent.py
collectors/: prospecto_parser.py
docs/: ANOTAÇÔES KICKOFF.txt
graph/: __init__.py  limpar_dados.py  neo4j_client.py  queries.py  schema.py
src/agents/: analyst_agent.py  common.py  supervisor.py
src/collectors/: anbima_collector.py  cvm_collector.py  fii_collector.py
src/graph/: diagnosticar_banco.py  queries.py
src/scheduler/: monitor.py
src/tools/: cvm_tools.py  neo4j_tools.py
tools/: market_tools.py  neo4j_tools.py
